[tool.poetry]
name = "search_engine"
version = "0.0.1"
description = "Full text search engine"
authors = ["Nikolay Baryshnikov <root@k0d.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.11.1"
gunicorn = "^20.0.4"
httpx = "^0.13.3"
uvicorn = "^0.11.6"
starlette = "^0.13.6"
pydantic = "^1.6.1"
python-dotenv = "^0.14.0"
aioredis = "^1.3.1"
asyncpg = "^0.21.0"
bson = "^0.5.10"
motor = "^2.3.0"
ujson = "^4.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.3.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"